# Similar-Words-Algorithm

./: Dockerfile  README.md  main.py  pyproject.toml
modules/: dictionary.py  statistics.py
services/: word_service.py
tests/: test_dictionary.py  test_word_service.py
